--- a/src/components/tile/tile.scss
+++ b/src/components/tile/tile.scss
@@ -179,6 +179,7 @@ a {
 
 :host([grouped]) .tile__left {
   grid-column: 1;
-  justify-self: start;
+  justify-self: stretch;
   min-width: 0;
+  overflow: hidden;
 }
